@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/chameleon
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/chameleon/ChangeLog,v 1.14 2012/05/20 15:39:02 floppym Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/chameleon/ChangeLog,v 1.15 2012/06/28 06:14:36 patrick Exp $
+
+*chameleon-2.9.2 (28 Jun 2012)
+
+  28 Jun 2012; Patrick Lauer <patrick@gentoo.org> +chameleon-2.9.2.ebuild:
+  Bump
 
   20 May 2012; Mike Gilbert <floppym@gentoo.org> chameleon-2.8.3-r1.ebuild:
   Replace py26.py with a stub for python 2.5.
@@ -69,4 +74,3 @@
   29 Jul 2011; Rafael G. Martins <rafaelmartins@gentoo.org>
   +chameleon-2.2.ebuild, +metadata.xml:
   Initial version. Thanks to Jan Matějka (bug #361629).
-
